--- a/notebooks/01_ingestion.ipynb
+++ b/notebooks/01_ingestion.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "<a name=\"3\"></a>\n",
     "## Ingestion Utility Functions (Funções Utilitárias de Ingestão)\n",
-    "<img align='center' src='../images/auth-client-credentials.png' style='width:800px;'>\n",
+    "<img align='center' src='../figures/auth-client-credentials.png' style='width:800px;'>\n",
     "\n",
     "**[EN-US]**\n",
     "\n",
@@ -278,7 +278,7 @@
    "source": [
     "<a name=\"3.3\"></a>\n",
     "### Track Features Extraction (Extração das Features da Track)\n",
-    "<img align='center' src='../images/track-features.png' style='width:800px;'>\n",
+    "<img align='center' src='../figures/track-features.png' style='width:800px;'>\n",
     "\n",
     "**[EN-US]**\n",
     "\n",
