--- a/notebooks/03_preprocessing.ipynb
+++ b/notebooks/03_preprocessing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 331,
    "id": "d180a5ba-3e9c-4c1f-958b-fdf41c7f9725",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 334,
    "id": "a14e5669-fdc3-4f5e-b0a8-25a17f52e375",
    "metadata": {
     "tags": []
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 336,
    "id": "779e1cec-0085-4ab7-8400-c0aa8dee2b62",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 339,
    "id": "2c0eac94-e925-4cd9-991c-5e901d5e5d28",
    "metadata": {},
    "outputs": [
@@ -392,14 +392,14 @@
        "4         0.425          0.000004    0.3210    0.454  136.377  1      3.578217  "
       ]
      },
-     "execution_count": 585,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = pd.read_csv('../data/transformed/dataset.csv')\n",
-    "X.head()"
+    "data = pd.read_csv('../data/transformed/data.csv')\n",
+    "data.head()"
    ]
   },
   {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 341,
    "id": "32323efd-f528-47e0-a2f1-c4f676224ca5",
    "metadata": {
     "tags": []
@@ -533,13 +533,13 @@
        "[982 rows x 3 columns]"
       ]
      },
-     "execution_count": 587,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "items = X.iloc[:, :3].copy()\n",
+    "items = data.iloc[:, :3].copy()\n",
     "items"
    ]
   },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 343,
    "id": "7c43f2f0-dd9e-40c0-938d-81421bcacecf",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 345,
    "id": "133cfe0b-63f1-4d58-ae9e-6038e8c9b548",
    "metadata": {
     "scrolled": true
@@ -714,13 +714,13 @@
        "4         0.425          0.000004    0.3210    0.454  136.377      3.578217  "
       ]
      },
-     "execution_count": 591,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_num = X.drop(columns=['id', 'name', 'artists', 'y', 'duration_ms']).copy()\n",
+    "X_num = data.drop(columns=['id', 'name', 'artists', 'y', 'duration_ms']).copy()\n",
     "X_num.head()"
    ]
   },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 347,
    "id": "72e7eed7-c2fe-4c63-8663-020277ef0c8d",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
        "[982 rows x 11 columns]"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 349,
    "id": "10796838-ff7e-4c27-b24a-f6586170eaa7",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 351,
    "id": "f0eeb1b2-9ee6-4d67-b5bf-e9bef628177c",
    "metadata": {
     "tags": []
@@ -1296,7 +1296,7 @@
        "0  125.323767      3.895687  "
       ]
      },
-     "execution_count": 597,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 352,
    "id": "136c52df-4817-468b-8ba1-2a57b20d3b90",
    "metadata": {
     "tags": []
@@ -1353,12 +1353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 354,
    "id": "f5e1c62c-5d9f-4765-abfa-f27fa0341c67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_num_oh.to_csv('../data/preprocessed/X.csv', index=False)"
+    "X_num_oh.to_csv('../data/preprocessed/X_pre.csv', index=False)"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 356,
    "id": "105417f0-1c52-4b3d-bccc-d3ed6a472a47",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1394,7 @@
    "source": [
     "# Creating the column vector of the target label y to be divided along\n",
     "# Criando o vetor de coluna do target label y para ser divido junto\n",
-    "y = X.iloc[:, -2].copy().to_numpy().reshape((-1, 1))\n",
+    "y = data.iloc[:, -2].copy().to_numpy().reshape((-1, 1))\n",
     "\n",
     "item_train, item_, y_train, y_ = train_test_split(X_num_oh, y, test_size=.4, random_state=42)\n",
     "user_train, user_ = train_test_split(user_df, test_size=.4, random_state=42)\n",
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 358,
    "id": "cf6da348-540d-4f2a-956a-fd1012ded422",
    "metadata": {},
    "outputs": [],
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 360,
    "id": "2c03c247-4ce3-4eda-b3c4-bcff2165e8c4",
    "metadata": {
     "scrolled": true
@@ -1466,7 +1466,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 606,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 362,
    "id": "12d7f1c6-9b60-4049-9662-d93c15bd2329",
    "metadata": {},
    "outputs": [],
