--- a/notebooks/01_ingestion.ipynb
+++ b/notebooks/01_ingestion.ipynb
@@ -558,7 +558,7 @@
    "outputs": [],
    "source": [
     "df_good = playlist_to_dataframe(good_songs, token_type, access_token, label=1)\n",
-    "df_good_2 = playlist_to_dataframe(good_songs_2, token_type, access_token, label=1)\n",
+    "#df_good_2 = playlist_to_dataframe(good_songs_2, token_type, access_token, label=1)\n",
     "df_bad = playlist_to_dataframe(bad_songs, token_type, access_token, label=0).drop(columns=['name'])\n",
     "df_good.head()"
    ]
@@ -581,7 +581,7 @@
    "outputs": [],
    "source": [
     "df_good['duration_min'] = df_good['duration_ms'] / 60000\n",
-    "df_good_2['duration_min'] = df_good_2['duration_ms'] / 60000\n",
+    "#df_good_2['duration_min'] = df_good_2['duration_ms'] / 60000\n",
     "df_bad['duration_min'] = df_bad['duration_ms'] / 60000\n",
     "df_good.head()"
    ]
@@ -604,7 +604,7 @@
    "outputs": [],
    "source": [
     "df_good.to_csv('../data/raw/df_good.csv', index=False)\n",
-    "df_good_2.to_csv('../data/raw/df_good_2.csv', index=False)\n",
+    "#df_good_2.to_csv('../data/raw/df_good_2.csv', index=False)\n",
     "df_bad.to_csv('../data/raw/df_bad.csv', index=False)"
    ]
   }
