--- a/notebooks/01_ingestion.ipynb
+++ b/notebooks/01_ingestion.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "d180a5ba-3e9c-4c1f-958b-fdf41c7f9725",
    "metadata": {
     "tags": []
@@ -65,8 +65,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv() # access environment variables (acessa as variáveis de ambiente)\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
