--- a/notebooks/04_model_train.ipynb
+++ b/notebooks/04_model_train.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "d180a5ba-3e9c-4c1f-958b-fdf41c7f9725",
    "metadata": {
     "tags": []
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "c393b527-d04c-436e-a57e-c53752016bab",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "'2.18.0'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "4111e591-cd26-477a-8002-9b0ee85ca53b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class L2_Norm(tf.keras.Layer):\n",
+    "class L2_Norm(Layer):\n",
     "    \"\"\"\n",
     "    [EN-US]\n",
     "    Transforms the L2 norm computation into a layer.\n",
