--- a/notebooks/01_ingestion.ipynb
+++ b/notebooks/01_ingestion.ipynb
@@ -14,10 +14,12 @@
     "    * [Track Features Extraction](#2.3)\n",
     "    * [Playlist to DataFrame](#2.4)\n",
     "* [Environment Variables](#3)\n",
-    "* [Data Extraction](#4)\n",
+    "* [Extract, Transform and Load](#4)\n",
     "    * [Request Authorization](#4.1)\n",
     "    * [Playlists Definition](#4.2)\n",
-    "    * [Data Extraction and Preparation](#4.3)"
+    "    * [Data Extract](#4.3)\n",
+    "    * [Data Transform](#4.3)\n",
+    "    * [Data Load](#4.3)"
    ]
   },
   {
@@ -455,7 +457,7 @@
    },
    "source": [
     "<a name=\"4\"></a>\n",
-    "## Playlist Data Extraction (Extração dos Dados da Playlist)\n",
+    "## Extract, Transform and Load (Extração, Transformação e Carregamento)\n",
     "**[EN-US]**\n",
     "\n",
     "Requesting Spotify authorization, extracting data from Spotify tracks, transforming this data and loading the data to disk.\n",
@@ -543,8 +545,8 @@
    "metadata": {},
    "source": [
     "<a name=\"4.3\"></a>\n",
-    "### Data ETL. Extraction, Transform and Load (Extração, Transformação e Carregamento dos Dados)\n",
-    "Extracting the data from playlists and projecting the first 5 examples from the `df_good` playlist dataset (Extraindo os dados das plalists e projetando os 5 primeiros exemplos do dataset da playlist `df_good`)."
+    "### Data Extract (Extração dos Dados)\n",
+    "Extracting the data from playlists and projecting the first 5 examples from the `df_good` playlist dataset (Extraindo os dados das playlists e projetando os 5 primeiros exemplos do dataset da playlist `df_good`)."
    ]
   },
   {
@@ -567,6 +569,8 @@
    "id": "92aa3c28-7ec2-4049-b333-f9ccf7f83a4a",
    "metadata": {},
    "source": [
+    "<a name=\"4.4\"></a>\n",
+    "### Data Transform (Transformação dos Dados)\n",
     "Creating the `duration_min` feature (Criando a feature `duration_min`)."
    ]
   },
@@ -590,7 +594,9 @@
    "id": "3e4cb2d7-1352-4846-9d56-c345d3034e5d",
    "metadata": {},
    "source": [
-    "Loading each dataset into the `./data/raw/` directory (Carregando cada dataset no diretório `./data/raw/`)."
+    "<a name=\"4.5\"></a>\n",
+    "### Data Load (Carregamento dos Dados)\n",
+    "Loading each dataset into the `../data/raw/` directory (Carregando cada dataset no diretório `../data/raw/`)."
    ]
   },
   {
