--- a/notebooks/02_EDA.ipynb
+++ b/notebooks/02_EDA.ipynb
@@ -282,7 +282,7 @@
     "\n",
     "Exploratory Data Analysis.\n",
     "\n",
-    "Input $X$ features:\n",
+    "Input features $X$ and target label $y$:\n",
     "* `id`: the Spotify ID for the track.\n",
     "* `name`: the name of the track.\n",
     "* `artists`: the principal artist who performed the track.\n",
@@ -306,7 +306,7 @@
     "\n",
     "Análise de Dados Exploratória.\n",
     "\n",
-    "Variáveis do input $X$:\n",
+    "Variáveis do input $X$ e o target label $y$:\n",
     "* `id`: o ID do Spotify para a track.\n",
     "* `name`: o nome da track.\n",
     "* `artists`: o artista principal que executaram a faixa.\n",
