--- a/notebooks/04_model_train.ipynb
+++ b/notebooks/04_model_train.ipynb
@@ -445,12 +445,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "90c56b67-9fc5-4c0c-857c-779bf28a3c27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hiperparams_tune(hiperparams):\n",
+    "def hyperparams_tune(hyperparams):\n",
     "    \"\"\"\n",
     "    [EN-US]\n",
     "    Setting the model for hyperparameter optimization.\n",
@@ -470,8 +470,8 @@
     "    threshold = .5\n",
     "    # Setting the hyperparameters\n",
     "    # Definindo os hiperparâmetros\n",
-    "    LR = hiperparams[0]\n",
-    "    lambda_r = hiperparams[1]\n",
+    "    LR = hyperparams[0]\n",
+    "    lambda_r = hyperparams[1]\n",
     "    # Setting the loss and the optimizer\n",
     "    # Definindo a loss e o otimizador\n",
     "    OPT = Adam(learning_rate=LR)\n",
@@ -721,7 +721,7 @@
     "user_opt = user_train_norm.copy()\n",
     "\n",
     "# Performing Bayesian optimization (Performando a bayesian optimization)\n",
-    "opt = gp_minimize(hiperparams_tune, space, random_state=42, verbose=0, n_calls=25, n_random_starts=10)\n",
+    "opt = gp_minimize(hyperparams_tune, space, random_state=42, verbose=0, n_calls=25, n_random_starts=10)\n",
     "# Output with the best combinations of hyperparameters\n",
     "# Output com as melhores combinações dos hiperparâmetros\n",
     "print(f'Learning rate: {opt.x[0]}\\nLambda: {opt.x[1]}')"
